logs/Slang/generated/hdlconv/hdlconvertor_p478.sv.log
name: hdlconvertor_p478
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p478.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p478.sv:2:1: error: language feature not yet supported
property q1;
^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p478.sv:5:1: error: language feature not yet supported
property q5;
^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p478.sv:6:18: error: expected expression
@(negedge clk) b[*3] |=> !b;
                 ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p478.sv:8:1: error: language feature not yet supported
property q6;
^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p478.sv:11:1: error: language feature not yet supported
a5: assert property (q6);
^~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p478.sv:13:1: error: language feature not yet supported
a6: assert property ($fell(c) |=> q6);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p478.sv:15:1: error: language feature not yet supported
sequence s2;
^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p478.sv:18:1: error: language feature not yet supported
c1: cover property (s2);
^~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p478.sv:20:1: error: language feature not yet supported
c2: cover property (@(negedge clk) s2);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p478.sv:22:1: error: language feature not yet supported
sequence s3;
^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p478.sv:25:1: error: language feature not yet supported
c3: cover property (s3);
^~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p478.sv:28:1: error: language feature not yet supported
c4: cover property (s3 ##1 b);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
